# REVEAL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.reveal/: analysis.json  grype.json  openvex.json  sbom.cdx.json
.reveal-test/attempt-001/: command.txt  poc.js  stdout.txt
.reveal/reachability/database/: baseline-info.json  codeql-database.yml
src/reveal/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  default_builders.py  exceptions.py  models.py  pipeline.py  preflight.py  runtime_factory.py
src/reveal/artifacts/: __init__.py  base.py  json_writer.py
src/reveal/llm/: __init__.py  base.py  ollama.py  openai.py
src/reveal/reachability/: __init__.py  api_selector.py  base.py  closed_corpus.py  llm_selector.py  retriever.py
src/reveal/reproduction/: __init__.py  base.py  docker_runner.py  llm_generator.py  llm_refiner.py
src/reveal/sbom/: __init__.py  base.py  syft.py
src/reveal/vex/: __init__.py  base.py  openvex.py  policy.py
src/reveal/vulnerabilities/: __init__.py  base.py  grype.py
tests/: test_cli.py  test_pipeline_refinement.py
tests/integration/: test_runtime_integration.py
tests/unit/: test_bootstrap.py  test_config.py  test_default_builders.py  test_models.py  test_pipeline.py  test_pipeline_errors.py  test_preflight.py  test_runtime_factory.py
tests/unit/artifacts/: test_base.py  test_json_writer.py
tests/unit/llm/: test_base.py  test_ollama.py  test_openai.py
tests/unit/reachability/: test_api_selector.py  test_base.py  test_closed_corpus.py  test_llm_selector.py  test_retriever.py  test_taint_base.py
(+91 files in other folders)
