[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reveal-sbom"
dynamic = ["version"]
description = "LLM-assisted reachability-to-exploitability verification for SBOM vulnerabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "inyeongjang", email = "726jang@gmail.com" },
]
keywords = [
    "sbom",
    "vex",
    "vulnerability",
    "exploitability",
    "taint-analysis",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
reveal = "reveal.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.version]
path = "src/reveal/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reveal"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["reveal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"